syntax = "proto3";

option go_package = "pb/gen";

import "dep/validator.proto";

package registry.v1;


service Networking {
    rpc ResolveNodeIp(ResolveNodeIpRequest) returns (ResolveNodeIpResponse);
    rpc SetNodeIp(SetNodeIpRequest) returns (SetNodeIpResponse);
}


message ResolveNodeIpRequest{
    string nodeId = 1;
}

message ResolveNodeIpResponse{
    string ip = 1;
}


message SetNodeIpRequest{
    string nodeId = 1  [(validator.field) = { string_not_empty: true}];
    string ip = 2  [(validator.field) = { string_not_empty: true,  regex: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"}];
}

message SetNodeIpResponse{

}